<resources>
    <string name="app_name">music_player_app</string>
    <string name="music_player_app">Music_Player_App</string>
    <string name="welcome_back">Welcome back</string>
    <string name="discover">Discover</string>
    <string name="profile">profile</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="double_life">Double Life</string>
    <string name="_1000_played">1000 Played</string>
    <string name="play_button" />
    <string name="celloo">Celloo</string>
    <string name="artist">Artist</string>
    <string name="salma_salsabil">Salma Salsabil</string>
    <string name="arsy_widianto">Arsy Widianto</string>
    <string name="nabila_taqiyyah">Nabila Taqiyyah</string>
    <string name="today_s_hits">Today\'s Hits</string>
    <string name="lyodra_margareta">Lyodra Margareta</string>
    <string name="tak_selalu_memiliki">Tak Selalu Memiliki</string>
    <string name="recently_played">Recently Played</string>
    <string name="search">Search</string>
    <string name="playlist">Playlist</string>
    <string name="home">Home</string>
    <string name="Celloo">Celloo</string>
    <string name="Library">Library</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="PLaylist" />
    <string name="OVT_24_7">OVT 24/7</string>
    <string name="_12_september_2024">12 September 2024</string>
    <string name="pingin_nilai_a">Pingin Nilai A</string>
    <string name="generate_your_playlis">Generate Your Playlis</string>
    <string name="generate_your_playlist">Generate your Playlist</string>
    <string name="penjaga_hati">Penjaga Hati</string>
    <string name="nadin_amizah">Nadin Amizah</string>
    <string name="rayuan_peremp">Rayuan Peremp..</string>
    <string name="nadhif_basalamah">Nadhif Basalamah</string>
    <string name="playlist_untuk_mengerjakan_tugas_lebih_semangat">Playlist untuk mengerjakan tugas lebih semangat</string>
    <string name="pharrell_williams">Pharrell Williams</string>
    <string name="add_song">Add Song</string>
    <string name="tak_selalu_memi">Tak Selalu Memi..</string>
    <string name="artists_or_songs">Artists or songs</string>
    <string name="search_bar">search bar</string>
    <string name="nadif_basamalah">Nadif Basamalah</string>
    <string name="back">back</string>
    <string name="view_all">View all</string>
    <string name="pause">pause</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>