<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <!-- Arrow (kiri) -->
            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="36dp" />

            <!-- Gambar (tengah) -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/center_image"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_playlist2"
                android:layout_centerInParent="true"
                app:shapeAppearanceOverlay="@style/songSquare" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pingin_nilai_a"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:layout_marginTop="27dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_untuk_mengerjakan_tugas_lebih_semangat"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:layout_marginTop="2dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_song1"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penjaga_hati"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nadhif_basalamah"
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_song2"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rayuan_peremp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nadin_amizah"
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_song3"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tak_selalu_memi"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lyodra_margareta"
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_rp1"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/double_life"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pharrell_williams"
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_rounded_button"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/add_song"
            android:paddingHorizontal="26dp"
            android:paddingVertical="13dp"
            android:textSize="16sp"
            />
    </LinearLayout>
</ScrollView>