<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="48dp"
            >
            <TextView
                android:id="@+id/text_discover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Library"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/ic_profile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_profile" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playlist"
                android:layout_width="142dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_rounded_button_not_selected"
                android:fontFamily="@font/poppins_medium"
                android:padding="8dp"
                android:text="@string/playlist"
                android:textColor="#D8D8D8"
                android:textSize="16sp" />

            <Button
                android:id="@+id/liked_songs"
                android:layout_width="142dp"
                android:layout_height="48dp"
                android:text="@string/liked_songs"
                android:background="@drawable/bg_rounded_button"
                android:textColor="@android:color/black"
                android:layout_gravity="start"
                android:padding="8dp"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_song1"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penjaga_hati"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nadhif_basalamah"
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_song2"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rayuan_peremp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nadin_amizah"
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_song3"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tak Selalu Memi.."
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lyodra Margareta "
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_rp1"
                app:shapeAppearanceOverlay="@style/songSquare"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Double Life"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pharrell Williams"
                    android:textSize="12sp"
                    android:textColor="#9DA8CD"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>