<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="64dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        >

        <ImageButton
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:rotation="270"
            android:src="@drawable/arrow_back_ios_24"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/center_image"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/song1"
            app:shapeAppearanceOverlay="@style/songSquare"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:text="@string/penjaga_hati"
            android:textColor="@color/white"
            android:textSize="32sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="@string/nadif_basamalah"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            >
            <ImageView
                android:id="@+id/next_prev"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/next_24"
                android:rotation="180"
                android:layout_gravity="center_vertical"/>
            <ImageButton
                android:id="@+id/pause_music_player"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="pause"
                android:src="@drawable/play_music_player"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="40dp"
                android:background="@null"/>
            <ImageView
                android:id="@+id/next_next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/next_24"
                android:rotation="0"
                android:layout_gravity="center_vertical"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            >
            <ImageView
                android:id="@+id/shuffle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/shuffle_24"
                android:rotation="180"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:id="@+id/repeat"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="repeat"
                android:src="@drawable/repeat_24"
                android:rotation="180"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="40dp"/>
            <ImageView
                android:id="@+id/liked"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/thumb_up_24"
                android:rotation="0"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>